--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.0",
+    "sweetalert2": "^11.22.4",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
