--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "jwt-decode": "^4.0.0",
     "motion": "^12.23.12",
     "react": "^19.1.1",
+    "react-accessible-time-picker": "^1.0.3",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.0",
